Fix track spacing issues

--- a/app/css/workspace.css
+++ b/app/css/workspace.css
@@ -167,7 +167,6 @@ body {
 	/*width: 100%;*/
 	height: 100px;
 	border-bottom: 2px solid black;
-	border-top: 1px solid black;
 	border-right: 2px solid black;
 	padding: 5px;
 	padding-bottom: 10px;
@@ -176,7 +175,7 @@ body {
 .track .trackName,
 .track .editTrackName {
 	margin: 0;
-	margin-top: 5px;
+	/*margin-top: 5px;*/
 	padding: 0;
 	font-weight: bold;
 	font-family: 'Oswald';
@@ -293,11 +292,24 @@ table.grid {
 	margin: 0;
 	padding: 0;
 	border-collapse: collapse;
-	border-spacing: 0;
+	border-spacing: 0px;
+}
+
+table.grid td:nth-child(1) {
+	border-top: 2px solid black;
+}
+
+table.grid td {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 .trackCellContainer {
-	width: 203px;
+	width: 213px;
+	height: 95px;
+	box-sizing: border-box;
+	padding: 5px 10px;
 }
 
 table.grid tr td:nth-child(2) {
